--- a/partials/search.html
+++ b/partials/search.html
@@ -1,7 +1,7 @@
 <h1>Recherche <small>/ Liste <span ng-show="musiques">({{ musiques.YouTube.length + musiques.SoundCloud.length + musiques.MyMusic.length }})</span></small></h1>
 <hr />
 
-<h2>In progress :)</h2>
+<div class="alert alert-warning" role="alert">In progress <i class="fa fa-smile-o" aria-hidden="true"></i></div>
 
 <div class="alert alert-warning alert-dismissible" role="alert" ng-show="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
