--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,11 +1,8 @@
-#main{
-  margin-left: 50px;
-  margin-right: 50px;
-}
+
 .navbar-form .glyphicon-remove {
   float: right;
-  top: 10px;
-  right: 22px;
+  top: -23px;
+  right: 6px;
   cursor: pointer;
 }
 
@@ -17,11 +14,14 @@
 
 
 li {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 .thumbnail{
   width: 90px;
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 *[ng-click], *[music-player], *[add-song], *[remove-from-playlist], *[play-from-playlist], *[seek-track], *[ui-sortable]{
@@ -42,4 +42,244 @@ li {
   table{
     table-layout:fixed;
   }
+}
+
+body > div.container{
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+#view, #menu{
+  max-height: 100vh;
+  overflow: auto;
+}
+
+#view{
+  padding-bottom: 100px;
+}
+
+#main{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  z-index: 9999;
+  .popover-content{
+    padding: 0;
+  }
+  .navbar{
+    margin: 0;
+    height: 100px;
+    .thumbnail{
+      margin: 0;
+    }
+  }
+  div[uib-popover-template-popup]{
+    min-width: 350px;
+  }
+}
+
+.vcenter {
+  display: inline-block;
+  vertical-align: middle;
+  float: none;
+}
+
+.logo{
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.container-musique {
+    position: relative;
+}
+
+.image {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  height: 100%;
+  width: 100%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.container-musique:hover .image {
+  opacity: 0.3;
+}
+
+.container-musique:hover .middle {
+  opacity: 1;
+}
+
+.text {
+  font-size: 16px;
+  height: 100%;
+  width: 100%;
+  .glyphicon{
+    font-size: 2em;
+  }
+}
+
+body,html{
+    height: 100%;
+    overflow: hidden;
+  }
+
+  nav.sidebar, .main{
+    height: 100vh;
+    -webkit-transition: margin 200ms ease-out;
+      -moz-transition: margin 200ms ease-out;
+      -o-transition: margin 200ms ease-out;
+      transition: margin 200ms ease-out;
+  }
+
+  .main{
+    padding: 10px 10px 0 10px;
+  }
+
+ @media (min-width: 765px) {
+
+    .main{
+      position: absolute;
+      width: calc(100% - 40px);
+      margin-left: 40px;
+      float: right;
+    }
+
+    nav.sidebar:hover + .main{
+      margin-left: 200px;
+    }
+
+    nav.sidebar.navbar.sidebar>.container .navbar-brand, .navbar>.container-fluid .navbar-brand {
+      margin-left: 0px;
+    }
+
+    nav.sidebar .navbar-brand, nav.sidebar .navbar-header{
+      text-align: center;
+      width: 100%;
+      margin-left: 0px;
+    }
+
+    nav.sidebar a{
+      padding-right: 13px;
+    }
+
+    nav.sidebar .navbar-nav > li:first-child{
+      border-top: 1px #e5e5e5 solid;
+    }
+
+    nav.sidebar .navbar-nav > li{
+      border-bottom: 1px #e5e5e5 solid;
+    }
+
+    nav.sidebar .navbar-nav .open .dropdown-menu {
+      position: static;
+      float: none;
+      width: auto;
+      margin-top: 0;
+      background-color: transparent;
+      border: 0;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+    }
+
+    nav.sidebar .navbar-collapse, nav.sidebar .container-fluid{
+      padding: 0 0px 0 0px;
+    }
+
+    .navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+      color: #777;
+    }
+
+    nav.sidebar{
+      width: 100%;
+      height: 100vh;
+      margin-left: -160px;
+      float: left;
+      margin-bottom: 0px;
+    }
+
+    nav.sidebar li {
+      width: 100%;
+    }
+
+    nav.sidebar:hover{
+      margin-left: 0px;
+    }
+
+    .forAnimate{
+      opacity: 0;
+    }
+  }
+
+  @media (min-width: 1330px) {
+
+    .main{
+      width: calc(100% - 200px);
+      margin-left: 200px;
+    }
+
+    nav.sidebar{
+      margin-left: 0px;
+      float: left;
+    }
+
+    nav.sidebar .forAnimate{
+      opacity: 1;
+    }
+  }
+
+  nav.sidebar .navbar-nav .open .dropdown-menu>li>a:hover, nav.sidebar .navbar-nav .open .dropdown-menu>li>a:focus {
+    color: #CCC;
+    background-color: transparent;
+  }
+
+  nav:hover .forAnimate{
+    opacity: 1;
+  }
+  section{
+    padding-left: 15px;
+  }
+
+
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  align-content: flex-start;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-flow: row wrap;
+  justify-content: space-around;
+  &.navbar{
+    align-items: center;
+  }
+}
+
+.flex-item {
+  padding: 5px;
+  width: 15%;
+  color: #000;
+  text-align: center;
 }
