--- a/partials/musiques.html
+++ b/partials/musiques.html
@@ -1,14 +1,9 @@
-<h1>Musiques <small> <span ng-show="musiques"> / Liste ({{ (musiques | filter:search).length }})</span></small></h1>
+<h1>Musiques <small> <span ng-show="musiques"> / Liste ({{ (musiques | filter:search).length }})</span></small> <button play-all="musiques" class="btn btn-default">Ajouter toutes les musiques au direct</button></h1>
 <hr />
 
 <div class="alert alert-warning alert-dismissible" role="alert" ng-show="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
   <strong>Warning!</strong>{{ alert }}
 </div>
-
-<p>
-  <a ng-show="isLogged" href="musiques/ajouter" class="btn btn-default">Ajouter une musique</a>
-  <button play-all="musiques" class="btn btn-default">Ajouter toutes les musiques au direct</button>
-</p>
 
 <table-musique musiques="musiques" order-by-field="orderByField" sort-reverse="false" search="search"></table-musique>
