--- a/partials/components/player.html
+++ b/partials/components/player.html
@@ -3,7 +3,7 @@
 
   <nav class="navbar-default row navbar flex-container">
 
-    <div class="flex-item" style="width:10%">
+    <div class="flex-item" style="width:100px">
       <a class="thumbnail">
         <img ng-if="currentPlaying.image" ng-src="{{ currentPlaying.image }}">
         <img ng-if="!currentPlaying.image" src="img/no-media.gif">
