--- a/partials/components/menu.html
+++ b/partials/components/menu.html
@@ -1,101 +1,3 @@
-
-<!-- <div>
-
-    <span><img src="img/logo.png" height="30"></span> MyMusic
-
-    <ul class="nav navbar-nav navbar-right">
-      <li><a is-active href="."><i class="fa fa-home"></i> Accueil</a></li>
-      <li><a is-active href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
-      <li><a is-active href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
-      <li><a is-active href="search"><i class="fa fa-search"></i> Recherche</a></li>
-      <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
-      <li class="dropdown" ng-show="isLogged">
-        <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ utilisateur.pseudo }}</a>
-        <ul class="dropdown-menu">
-          <li><a href="mon-compte"><i class="fa fa-user"></i> Mon Compte</a></li>
-          <li><a logout-utilisateur><i class="fa fa-sign-out"></i> Déconnexion</a></li>
-        </ul>
-      </li>
-    </ul>
-    <form class="navbar-form navbar-left ng-valid ng-dirty" role="search">
-      <div class="form-group">
-        <input type="text" class="form-control ng-valid ng-dirty" ng-model="search" placeholder="Rechercher sur la page" autofocus="true">
-        <span class="glyphicon glyphicon-remove" ng-click="search = ''" ng-show="search.length"></span>
-      </div>
-    </form>
-  </div> -->
- <!-- <div>
-  <nav class="navbar navbar-default sidebar" role="navigation">
-      <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><a is-active href="."><i class="fa fa-home"> Accueil</a></li>
-          <li><a is-active href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
-          <li><a is-active href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
-          <li><a is-active href="search"><i class="fa fa-search"></i> Recherche</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Usuarios <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-user"></span></a>
-            <ul class="dropdown-menu forAnimate" role="menu">
-              <li><a href="{{URL::to('createusuario')}}">Crear</a></li>
-              <li><a href="#">Modificar</a></li>
-              <li><a href="#">Reportar</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Informes</a></li>
-            </ul>
-          </li>
-          <li ><a href="#">Libros<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-th-list"></span></a></li>
-          <li ><a href="#">Tags<span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-tags"></span></a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</div> -->
-  <!-- <nav class="navbar navbar-default sidebar" role="navigation">
-      <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-sidebar-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div class="collapse navbar-collapse" id="bs-sidebar-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a is-active href="."><i class="fa fa-home"></i> Accueil</a></li>
-          <li><a is-active href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
-          <li><a is-active href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
-          <li><a is-active href="search"><i class="fa fa-search"></i> Recherche</a></li>
-          <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
-          <li class="dropdown" ng-show="isLogged">
-            <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user"></i> {{ utilisateur.pseudo }}</a>
-            <ul class="dropdown-menu">
-              <li><a href="mon-compte"><i class="fa fa-user"></i> Mon Compte</a></li>
-              <li><a logout-utilisateur><i class="fa fa-sign-out"></i> Déconnexion</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-left ng-valid ng-dirty" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control ng-valid ng-dirty" ng-model="search" placeholder="Rechercher sur la page" autofocus="true">
-            <span class="glyphicon glyphicon-remove" ng-click="search = ''" ng-show="search.length"></span>
-          </div>
-        </form>
-      </div>
-    </div>
-  </nav> -->
-
-  <div>
     <nav class="navbar navbar-default sidebar" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
@@ -110,7 +12,7 @@
           <div class="logo"><a href="."><img src="img/logo.png" height="80"></a></div>
           <ul class="nav navbar-nav">
             <li><a is-active href="musiques"><i class="fa fa-music"></i> Musiques</a></li>
-            <li><a ng-show="isLogged" href="musiques/ajouter"><i class="fa fa-plus"></i> Ajouter une musique</a></li>
+            <li ng-show="isLogged"><a href="musiques/ajouter"><i class="fa fa-plus"></i> Ajouter une musique</a></li>
             <li><a is-active href="playlists"><i class="fa fa-list"></i> Playlists</a></li>
             <li><a is-active href="search"><i class="fa fa-search"></i> Rechercher</a></li>
             <li ng-show="!isLogged"><a href="identification"><i class="fa fa-power-off" aria-hidden="true"></i> Connexion</a></li>
@@ -131,4 +33,3 @@
         </div>
     </div>
   </nav>
-  </div>
