--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,13 +52,38 @@ body > div.container{
   overflow-y: auto;
 }
 
-#view, #menu{
-  max-height: 100vh;
+#view{
+  height: 89vh;
   overflow: auto;
 }
 
-#view{
-  padding-bottom: 100px;
+@media (max-width: 1300px) and (min-width: 765px) {
+
+  #view{
+    width: calc(100vh - 40px)
+  }
+
+  #menu{
+    width: 90px;
+    .logo img{
+      width: 100%;
+      height: auto;
+    }
+    ul.navbar-nav{
+      width: 56px;
+      li{
+        a {
+          font-size: 0;
+        }
+        i{
+          font-size: 20px;
+        }
+      }
+    }
+    .navbar-form{
+      display: none;
+    }
+  }
 }
 
 #main{
@@ -140,10 +165,12 @@ body > div.container{
 body,html{
     height: 100%;
     overflow: hidden;
+    min-width: 700px;
   }
 
   nav.sidebar, .main{
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     -webkit-transition: margin 200ms ease-out;
       -moz-transition: margin 200ms ease-out;
       -o-transition: margin 200ms ease-out;
@@ -152,6 +179,10 @@ body,html{
 
   .main{
     padding: 10px 10px 0 10px;
+  }
+
+  nav.sidebar form.navbar-form input.form-control{
+    width: 100%;
   }
 
  @media (min-width: 765px) {
@@ -211,7 +242,6 @@ body,html{
     nav.sidebar{
       width: 100%;
       height: 100vh;
-      margin-left: -160px;
       float: left;
       margin-bottom: 0px;
     }
